	  functions, correct a few minor typos, and wrap everything in a
	  try/catch block so we catch any exceptions generated by Rcpp::as
	  or other functions and forward it along to an R-language stop()
	  error instead of terminating our R instance.
	* inst/unitTests/runit.messages.R (test.message): Add unit tests
	  for our handling of setting repeated message fields.

2013-12-26  Murray Stokely  <mstokely@google.com>

	* src/mutators.cpp: Support setting int32 values with character
	  vectors of a decimal number, as we do by necessity for int64s.
	  Also, refuse to set non-repeated bools to NA, just as we do for
	  repeated bool fields by raising a stop() error since protocol
	  buffer bools are 2-valued and NA is the third-value of R bools.
	* inst/unitTests/runit.int32.R (test.int32): Add tests for above.
	* NAMESPACE: Add missing export for .DollarNames
	  EnumValueDescriptor to allow completion on that class.
	* R/00classes.R: Update FileDescriptor '$' dispatch to work
	  properly for the names of fields defined in the FileDescriptor,
	  instead of just returning NULL even for types returned by $
	  completion.
	* vignettes/RProtoBuf-intro.Rnw (subsubsection{Retrieve fields}):
	  Update the type mapping tables to note that characters can be
	  extracted from 64-bit integer types with the
	  RProtoBuf.int64AsString type and note that int32 and int64 types
	  can be set to character values representing decimal numbers.
	* TODO: Update todo list.
	* inst/unitTests/runit.bool.R (test.bool): Add more tests about
	  boolean values, NA handling, etc.

2013-12-23  Murray Stokely  <mstokely@google.com>

	* DESCRIPTION (Version): increment.
	* inst/proto/addressbook.proto: Reserved extension fields in
	  tutorial.Person.
	* vignettes/RProtoBuf-intro.Rnw (subsection{Extensions}): Added a
	  new section documenting protocol buffer extensions.

2013-12-20  Murray Stokely  <mstokely@google.com>

	* R/00classes.R: Correct a bug that incorrectly dispatched